--- a/blog/blog_0616.md
+++ b/blog/blog_0616.md
@@ -1,14 +1,46 @@
-# 你好
+# markdownlint规则详细介绍
 
-试试看
-
-```python
-print("123")
-```
-
-试试文中代码：``print("123")``
-
-##加粗
-
-*倾斜*
-
+01. 标题每级数只能扩大1，不能隔级创建标题
+02. 文档的第一个标题必须是最高级的标题（标题等级1级到6级逐渐降低）
+03. 整篇文档要采用一致的标题格式
+04. 整篇文档定义无序列表的格式要一致
+05. 同一级的列表缩进必须一致
+06. 1级列表不能缩进
+07. 无序列表嵌套缩进时默认采用两个空格
+08. 行尾最多可以添加两个空格，超过会给出警告，两个空格正好可以用于换行
+09. 不能使用tab键缩进，要使用空格
+10. 检查内联形式的链接的创建方式是否错误，中括号和圆括号是否用对
+11. 文档中不能有连续的空行，在代码块中此规则不会生效
+12. 默认行的最大长度是80，此规则对代码块、表格、标题也生效
+13. 在代码块中，终端命令前不能有美元符号($)
+14. 在"atx"格式的标题中，#号和文字间需用一个空格隔开
+15. 在"atx"格式的标题中，#号和文字间只能用一个空格隔开，不能有多余的空格
+16. 在"closed_atx"格式的标题中，文字和前后的#号之间需用一个空格隔开
+17. 在"closed_atx"格式的标题中，文字和前后的#号之间只能用一个空格隔开，不能有多余的空格
+18. 标题行的上下行必须都是空行
+19. 标题行不能缩进
+20. 文档不能有内容重复的标题
+21. 同一文档只能有一个最高级的标题，默认是只能有一个1级标题
+22. 标题行末尾不能有以下标点符号：".,;:!?"
+23. 创建引用区块时，右尖括号 ( > ) 和文字之间有且只能有一个空格
+24. 两个引用区块间不能仅用一个空行隔开或者同一引用区块中不能有空行，如果一行中没有内容，则这一行要用>开头
+25. 有序列表的前缀序号格式必须只用1或者从1开始的加1递增数字("one_or_ordered")
+26. 列表（有序、无序）的前缀符号和文字之间用1个空格隔开
+    在列表嵌套或者同一列表项中有多个段落时，无序列表缩进两个空格，有序列表缩进3个空格
+27. 单独的代码块前后需要用空行隔开（除非是在文档开头或末尾），否则有些解释器不会解释为代码块
+28. 列表（有序、无序）前后需要用空行隔开，否则有些解释器不会解释为列表
+29. 文档中不允许使用HTML语句
+30. 单纯的链接地址需要用尖括号 (<>) 包裹，否则有些解释器不会解释为链接
+31. 创建水平线时整篇文档要统一(consistent)，要和文档中第一次创建水平线使用的符号一致
+32. 不能用强调代替标题
+33. 用于创建强调的符号和强调的的文字之间不能有空格
+34. 当用单反引号创建代码段的时候，单反引号和它们之间的代码不能有空格
+35. 链接名和包围它的中括号之间不能有空格，但链接名中间可以有空格，如：[百度](http://www.baidu.com "百度")
+36. 单独的代码块（此处是指上下用三个反引号包围的代码块）应该指定代码块的编程语言，这一点有助于解释器对代码进行代码高亮
+37. 文档的第一个非空行应该是文档最高级的标题，默认是1级标题
+38. 链接的地址不能为空
+39. 要求标题遵循一定的结构，默认是没有规定的结构("null")
+40. 指定一些名称，会检查它是否有正确的大写
+41. 图片链接必须包含描述文本（alt text）
+42. 整篇文档采用一致的代码格式
+43. 文档需用一个空行结尾
