--- a/blog/blog_0616.md
+++ b/blog/blog_0616.md
@@ -8,7 +8,7 @@
 06. 1级列表不能缩进
 07. 无序列表嵌套缩进时默认采用两个空格
 08. 行尾最多可以添加两个空格，超过会给出警告，两个空格正好可以用于换行
-09. 不能使用tab键缩进，要使用空格
+09. 不能使用tab键缩进，要使用空格（为啥我可以？）
 10. 检查内联形式的链接的创建方式是否错误，中括号和圆括号是否用对
 11. 文档中不能有连续的空行，在代码块中此规则不会生效
 12. 默认行的最大长度是80，此规则对代码块、表格、标题也生效
